--- a/package.json
+++ b/package.json
@@ -25,8 +25,17 @@
   "devDependencies": {
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.1.0",
     "html-webpack-plugin": "^5.2.0",
+    "less": "^4.1.1",
+    "less-loader": "^8.0.0",
     "path": "^0.12.7",
+    "postcss-loader": "^5.0.0",
+    "react-dev-utils": "^11.0.3",
+    "resolve-url-loader": "^3.1.2",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
+    "stylus-loader": "^5.0.0",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
