--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "stylus-loader": "^5.0.0",
+    "thread-loader": "^3.0.1",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
