--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,7 @@
 {
-  "presets": ["@babel/preset-react"]
+  "presets": ["@babel/preset-react", "@babel/preset-env"],
+  "plugins": [
+    ["import", { "libraryName": "antd", "style": "css" }],
+    "lodash"
+  ]
 }
