--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-webpack5-template",
   "version": "1.0.0",
-  "description": "",
+  "description": "webpack5 react 模板",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack serve --config webpack.dev.js",
+    "dev": "webpack serve --config webpack.dev.js --hot",
     "build": "webpack --config webpack.prod.js"
   },
   "repository": {
@@ -19,17 +19,27 @@
   },
   "homepage": "https://github.com/jacob-lcs/react-webpack5-template#readme",
   "dependencies": {
+    "antd": "^4.13.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.13.9",
     "@babel/preset-react": "^7.12.13",
     "autoprefixer": "^10.2.4",
     "babel-loader": "^8.2.2",
+    "babel-plugin-import": "^1.13.3",
+    "babel-plugin-lodash": "^3.3.4",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.1.0",
+    "css-minimizer-webpack-plugin": "^1.2.0",
     "html-webpack-plugin": "^5.2.0",
     "less": "^4.1.1",
     "less-loader": "^8.0.0",
+    "mini-css-extract-plugin": "^1.3.9",
+    "moment-locales-webpack-plugin": "^1.2.0",
     "path": "^0.12.7",
     "postcss-loader": "^5.0.0",
     "postcss-normalize": "^9.0.0",
@@ -39,10 +49,14 @@
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "stylus-loader": "^5.0.0",
+    "terser-webpack-plugin": "^5.1.1",
     "thread-loader": "^3.0.1",
     "webpack": "^5.24.2",
+    "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3"
+    "webpack-manifest-plugin": "^3.0.0",
+    "webpack-merge": "^5.7.3",
+    "webpackbar": "^5.0.0-3"
   }
 }
