--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.13.9",
     "@babel/preset-react": "^7.12.13",
     "autoprefixer": "^10.2.4",
