--- a/package.json
+++ b/package.json
@@ -19,45 +19,46 @@
   },
   "homepage": "https://github.com/jacob-lcs/react-webpack5-template#readme",
   "dependencies": {
-    "antd": "^4.13.0",
+    "antd": "^4.24.8",
     "lodash": "^4.17.21",
-    "moment": "^2.29.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "moment": "^2.29.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.13.9",
-    "@babel/preset-react": "^7.12.13",
-    "autoprefixer": "^10.2.4",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-import": "^1.13.3",
+    "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "autoprefixer": "^10.4.14",
+    "babel-loader": "^8.3.0",
+    "babel-plugin-import": "^1.13.6",
     "babel-plugin-lodash": "^3.3.4",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.1.0",
-    "css-minimizer-webpack-plugin": "^1.2.0",
-    "html-webpack-plugin": "^5.2.0",
-    "less": "^4.1.1",
-    "less-loader": "^8.0.0",
-    "mini-css-extract-plugin": "^1.3.9",
+    "css-loader": "^5.2.7",
+    "css-minimizer-webpack-plugin": "^1.3.0",
+    "html-webpack-plugin": "^5.5.0",
+    "less": "^4.1.3",
+    "less-loader": "^8.1.1",
+    "mini-css-extract-plugin": "^1.6.2",
     "moment-locales-webpack-plugin": "^1.2.0",
     "path": "^0.12.7",
-    "postcss-loader": "^5.0.0",
+    "postcss-loader": "^5.3.0",
     "postcss-normalize": "^9.0.0",
-    "postcss-preset-env": "^6.7.0",
-    "react-dev-utils": "^11.0.3",
-    "resolve-url-loader": "^3.1.2",
-    "sass-loader": "^11.0.1",
+    "postcss-preset-env": "^6.7.1",
+    "react-dev-utils": "^11.0.4",
+    "resolve-url-loader": "^3.1.5",
+    "sanitize.css": "^12.0.0",
+    "sass-loader": "^11.1.1",
     "style-loader": "^2.0.0",
     "stylus-loader": "^5.0.0",
-    "terser-webpack-plugin": "^5.1.1",
-    "thread-loader": "^3.0.1",
-    "webpack": "^5.64.1",
-    "webpack-bundle-analyzer": "^4.4.0",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-manifest-plugin": "^3.0.0",
-    "webpack-merge": "^5.7.3",
-    "webpackbar": "^5.0.0-3"
+    "terser-webpack-plugin": "^5.3.7",
+    "thread-loader": "^3.0.4",
+    "webpack": "^5.76.3",
+    "webpack-bundle-analyzer": "^4.8.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^3.11.3",
+    "webpack-manifest-plugin": "^3.2.0",
+    "webpack-merge": "^5.8.0",
+    "webpackbar": "^5.0.2"
   }
 }
