feat: upgrade dependencies

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,4 @@
 {
   "presets": ["@babel/preset-react", "@babel/preset-env"],
-  "plugins": [
-    ["import", { "libraryName": "antd", "style": "css" }],
-    "lodash"
-  ]
+  "plugins": []
 }
