--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-webpack5-template",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "webpack5 react 模板",
   "main": "index.js",
   "scripts": {
@@ -19,46 +19,44 @@
   },
   "homepage": "https://github.com/jacob-lcs/react-webpack5-template#readme",
   "dependencies": {
-    "antd": "^4.24.8",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "antd": "^5.3.2",
+    "dayjs": "^1.11.7",
+    "lodash-es": "^4.17.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "autoprefixer": "^10.4.14",
-    "babel-loader": "^8.3.0",
-    "babel-plugin-import": "^1.13.6",
-    "babel-plugin-lodash": "^3.3.4",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.2.7",
-    "css-minimizer-webpack-plugin": "^1.3.0",
+    "babel-loader": "^9.1.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.7.3",
+    "css-minimizer-webpack-plugin": "^4.2.2",
     "html-webpack-plugin": "^5.5.0",
     "less": "^4.1.3",
-    "less-loader": "^8.1.1",
-    "mini-css-extract-plugin": "^1.6.2",
-    "moment-locales-webpack-plugin": "^1.2.0",
+    "less-loader": "^11.1.0",
+    "mini-css-extract-plugin": "^2.7.5",
     "path": "^0.12.7",
-    "postcss-loader": "^5.3.0",
-    "postcss-normalize": "^9.0.0",
-    "postcss-preset-env": "^6.7.1",
-    "react-dev-utils": "^11.0.4",
-    "resolve-url-loader": "^3.1.5",
-    "sanitize.css": "^12.0.0",
-    "sass-loader": "^11.1.1",
-    "style-loader": "^2.0.0",
-    "stylus-loader": "^5.0.0",
+    "postcss-loader": "^7.1.0",
+    "postcss-normalize": "^10.0.1",
+    "postcss-preset-env": "^8.1.0",
+    "react-dev-utils": "^12.0.1",
+    "resolve-url-loader": "^5.0.0",
+    "sass-loader": "^13.2.1",
+    "style-loader": "^3.3.2",
+    "stylus-loader": "^7.1.0",
     "terser-webpack-plugin": "^5.3.7",
     "thread-loader": "^3.0.4",
     "webpack": "^5.76.3",
     "webpack-bundle-analyzer": "^4.8.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^3.11.3",
-    "webpack-manifest-plugin": "^3.2.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.1",
+    "webpack-manifest-plugin": "^5.0.0",
     "webpack-merge": "^5.8.0",
-    "webpackbar": "^5.0.2"
+    "webpackbar": "^5.0.2",
+    "sass": "^1.60.0",
+    "stylus": "^0.59.0"
   }
 }
