--- a/package.json
+++ b/package.json
@@ -26,11 +26,9 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.3",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
+    "@swc/core": "^1.3.42",
     "autoprefixer": "^10.4.14",
-    "babel-loader": "^9.1.2",
+    "browserslist": "^4.21.5",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^4.2.2",
@@ -39,14 +37,17 @@
     "less-loader": "^11.1.0",
     "mini-css-extract-plugin": "^2.7.5",
     "path": "^0.12.7",
+    "postcss": "^8.4.21",
     "postcss-loader": "^7.1.0",
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^8.1.0",
-    "react-dev-utils": "^12.0.1",
     "resolve-url-loader": "^5.0.0",
+    "sass": "^1.60.0",
     "sass-loader": "^13.2.1",
     "style-loader": "^3.3.2",
+    "stylus": "^0.59.0",
     "stylus-loader": "^7.1.0",
+    "swc-loader": "^0.2.3",
     "terser-webpack-plugin": "^5.3.7",
     "thread-loader": "^3.0.4",
     "webpack": "^5.76.3",
@@ -55,8 +56,6 @@
     "webpack-dev-server": "^4.13.1",
     "webpack-manifest-plugin": "^5.0.0",
     "webpack-merge": "^5.8.0",
-    "webpackbar": "^5.0.2",
-    "sass": "^1.60.0",
-    "stylus": "^0.59.0"
+    "webpackbar": "^5.0.2"
   }
 }
