--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -21,6 +21,10 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
+    - name: Use Pnpm v6.35.1
+      uses: pnpm/action-setup@v2
+      with:
+        version: 6.35.1
 
     - name: Build
       run: |
