--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
   },
   "homepage": "https://github.com/jacob-lcs/react-webpack5-template#readme",
   "dependencies": {
-    "antd": "^5.3.2",
+    "antd": "^5.4.0",
     "dayjs": "^1.11.7",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@swc/core": "^1.3.42",
+    "@swc/core": "^1.3.46",
     "autoprefixer": "^10.4.14",
     "browserslist": "^4.21.5",
     "clean-webpack-plugin": "^4.0.0",
@@ -38,22 +38,23 @@
     "mini-css-extract-plugin": "^2.7.5",
     "path": "^0.12.7",
     "postcss": "^8.4.21",
-    "postcss-loader": "^7.1.0",
+    "postcss-loader": "^7.2.4",
     "postcss-normalize": "^10.0.1",
-    "postcss-preset-env": "^8.1.0",
+    "postcss-preset-env": "^8.3.0",
     "resolve-url-loader": "^5.0.0",
-    "sass": "^1.60.0",
-    "sass-loader": "^13.2.1",
+    "sass": "^1.61.0",
+    "sass-loader": "^13.2.2",
     "style-loader": "^3.3.2",
     "stylus": "^0.59.0",
     "stylus-loader": "^7.1.0",
     "swc-loader": "^0.2.3",
     "terser-webpack-plugin": "^5.3.7",
     "thread-loader": "^3.0.4",
-    "webpack": "^5.76.3",
+    "typescript": "^5.0.4",
+    "webpack": "^5.78.0",
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.13.1",
+    "webpack-dev-server": "^4.13.2",
     "webpack-manifest-plugin": "^5.0.0",
     "webpack-merge": "^5.8.0",
     "webpackbar": "^5.0.2"
