--- a/package.json
+++ b/package.json
@@ -19,46 +19,49 @@
   },
   "homepage": "https://github.com/jacob-lcs/react-webpack5-template#readme",
   "dependencies": {
-    "antd": "^5.4.4",
-    "dayjs": "^1.11.7",
+    "antd": "^5.22.1",
+    "dayjs": "^1.11.13",
     "lodash-es": "^4.17.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@swc/core": "^1.3.53",
-    "@types/lodash-es": "^4.17.7",
-    "@types/react": "^18.0.38",
-    "@types/react-dom": "^18.0.11",
-    "autoprefixer": "^10.4.14",
-    "browserslist": "^4.21.5",
-    "css-loader": "^6.7.3",
-    "css-minimizer-webpack-plugin": "^5.0.0",
-    "html-webpack-plugin": "^5.5.1",
-    "less": "^4.1.3",
-    "less-loader": "^11.1.0",
-    "mini-css-extract-plugin": "^2.7.5",
+    "@swc/core": "^1.9.2",
+    "@types/lodash-es": "^4.17.12",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "autoprefixer": "^10.4.20",
+    "browserslist": "^4.24.2",
+    "css-loader": "^6.11.0",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "html-webpack-plugin": "^5.6.3",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.4",
+    "mini-css-extract-plugin": "^2.9.2",
     "path": "^0.12.7",
-    "postcss": "^8.4.23",
-    "postcss-loader": "^7.2.4",
+    "postcss": "^8.4.49",
+    "postcss-loader": "^7.3.4",
     "postcss-normalize": "^10.0.1",
-    "postcss-preset-env": "^8.3.2",
+    "postcss-preset-env": "^8.5.1",
     "resolve-url-loader": "^5.0.0",
-    "sass": "^1.62.0",
-    "sass-loader": "^13.2.2",
-    "style-loader": "^3.3.2",
+    "sass": "^1.81.0",
+    "sass-loader": "^13.3.3",
+    "style-loader": "^3.3.4",
     "stylus": "^0.61.0",
-    "stylus-loader": "^7.1.0",
-    "swc-loader": "^0.2.3",
-    "terser-webpack-plugin": "^5.3.7",
-    "thread-loader": "^4.0.1",
-    "typescript": "^5.0.4",
-    "webpack": "^5.80.0",
-    "webpack-bundle-analyzer": "^4.8.0",
-    "webpack-cli": "^5.0.2",
-    "webpack-dev-server": "^4.13.3",
+    "stylus-loader": "^7.1.3",
+    "swc-loader": "^0.2.6",
+    "terser-webpack-plugin": "^5.3.10",
+    "thread-loader": "^4.0.4",
+    "typescript": "^5.6.3",
+    "webpack": "^5.96.1",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.2",
     "webpack-manifest-plugin": "^5.0.0",
-    "webpack-merge": "^5.8.0",
+    "webpack-merge": "^5.10.0",
     "webpackbar": "^5.0.2"
+  },
+  "engines": {
+    "pnpm": "^9.0.0"
   }
 }
