--- a/package.json
+++ b/package.json
@@ -32,23 +32,24 @@
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
     "browserslist": "^4.24.2",
-    "css-loader": "^6.11.0",
-    "css-minimizer-webpack-plugin": "^5.0.1",
+    "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.0",
     "html-webpack-plugin": "^5.6.3",
     "less": "^4.2.0",
-    "less-loader": "^11.1.4",
+    "less-loader": "^12.2.0",
+    "lightningcss": "^1.28.1",
     "mini-css-extract-plugin": "^2.9.2",
     "path": "^0.12.7",
     "postcss": "^8.4.49",
-    "postcss-loader": "^7.3.4",
-    "postcss-normalize": "^10.0.1",
-    "postcss-preset-env": "^8.5.1",
+    "postcss-loader": "^8.1.1",
+    "postcss-normalize": "^13.0.1",
+    "postcss-preset-env": "^10.1.1",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.81.0",
-    "sass-loader": "^13.3.3",
-    "style-loader": "^3.3.4",
-    "stylus": "^0.61.0",
-    "stylus-loader": "^7.1.3",
+    "sass-loader": "^16.0.3",
+    "style-loader": "^4.0.0",
+    "stylus": "^0.64.0",
+    "stylus-loader": "^8.1.1",
     "swc-loader": "^0.2.6",
     "terser-webpack-plugin": "^5.3.10",
     "thread-loader": "^4.0.4",
@@ -56,10 +57,10 @@
     "webpack": "^5.96.1",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.2",
+    "webpack-dev-server": "^5.1.0",
     "webpack-manifest-plugin": "^5.0.0",
-    "webpack-merge": "^5.10.0",
-    "webpackbar": "^5.0.2"
+    "webpack-merge": "^6.0.1",
+    "webpackbar": "^7.0.0"
   },
   "engines": {
     "pnpm": "^9.0.0"
