chore: update webpack configuration and add ESLint setup

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.16.0",
     "@swc/core": "^1.9.2",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.9.1",
@@ -36,6 +37,10 @@
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "dotenv-webpack": "^8.1.0",
+    "eslint": "^9.16.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-compiler": "19.0.0-beta-37ed2a7-20241206",
+    "globals": "^15.13.0",
     "html-webpack-plugin": "^5.6.3",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
@@ -46,6 +51,7 @@
     "postcss-loader": "^8.1.1",
     "postcss-normalize": "^13.0.1",
     "postcss-preset-env": "^10.1.1",
+    "react-compiler-webpack": "^0.1.2",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.81.0",
     "sass-loader": "^16.0.3",
@@ -56,6 +62,7 @@
     "terser-webpack-plugin": "^5.3.10",
     "thread-loader": "^4.0.4",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.18.0",
     "webpack": "^5.96.1",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
