--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/jacob-lcs/react-webpack5-template#readme",
   "dependencies": {
-    "antd": "^5.22.1",
+    "antd": "^6.1.2",
     "dayjs": "^1.11.13",
     "lodash-es": "^4.17.21",
     "react": "^19.0.0",
@@ -29,7 +29,7 @@
     "@eslint/js": "^9.16.0",
     "@swc/core": "^1.9.2",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.9.1",
+    "@types/node": "^25.0.3",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.4.20",
@@ -39,7 +39,7 @@
     "dotenv-webpack": "^8.1.0",
     "eslint": "^9.16.0",
     "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-compiler": "19.0.0-beta-e552027-20250112",
+    "eslint-plugin-react-compiler": "19.1.0-rc.2",
     "globals": "^16.0.0",
     "html-webpack-plugin": "^5.6.3",
     "less": "^4.2.0",
@@ -51,7 +51,7 @@
     "postcss-loader": "^8.1.1",
     "postcss-normalize": "^13.0.1",
     "postcss-preset-env": "^10.1.1",
-    "react-compiler-webpack": "^0.1.2",
+    "react-compiler-webpack": "^1.0.0",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.81.0",
     "sass-loader": "^16.0.3",
@@ -64,10 +64,10 @@
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.18.0",
     "webpack": "^5.96.1",
-    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-bundle-analyzer": "^5.1.0",
     "webpack-cli": "^6.0.0",
     "webpack-dev-server": "^5.1.0",
-    "webpack-manifest-plugin": "^5.0.0",
+    "webpack-manifest-plugin": "^6.0.1",
     "webpack-merge": "^6.0.1",
     "webpackbar": "^7.0.0"
   },
