--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "1.1.0",
   "description": "webpack5 react 模板",
   "main": "index.js",
+  "sideEffects": [
+    "*.css",
+    "*.less",
+    "*.scss",
+    "*.sass",
+    "*.styl"
+  ],
   "scripts": {
     "dev": "webpack serve --config webpack.dev.js --hot",
     "build": "webpack --config webpack.prod.js"
@@ -27,6 +34,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.6.2",
     "@swc/core": "^1.9.2",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^25.0.3",
@@ -52,6 +60,7 @@
     "postcss-normalize": "^13.0.1",
     "postcss-preset-env": "^10.1.1",
     "react-compiler-webpack": "^1.0.0",
+    "react-refresh": "^0.18.0",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.81.0",
     "sass-loader": "^16.0.3",
